# shipcheck

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  dashboard.html  dryrun.sh  dryrun_runner.py  generate_reviews.py  run_experiment.py
engine/: .gitignore  dryrun.sh  dryrun_runner.py  pyproject.toml  stream_filter.py
engine/.playwright-cli/: page-2026-03-17T02-22-41-919Z.yml  page-2026-03-17T02-23-26-574Z.yml  page-2026-03-17T02-23-56-516Z.yml  page-2026-03-17T02-24-29-268Z.yml  page-2026-03-17T02-24-35-400Z.yml  page-2026-03-17T02-24-40-063Z.yml  page-2026-03-17T02-24-44-972Z.yml
engine/configs/: ablation.yaml  dryrun.yaml
engine/configs/personas/benchmark/: b001.yaml  b005.yaml  b007.yaml  b008.yaml  b010.yaml  b013.yaml  (+10 more)
engine/data/benchmarks/: g2_tally_reviews.jsonl  nngroup_benchmarks.jsonl
engine/plans/: browser-automation-upgrade.md  playwright-cli-migration.md
engine/prompts/: action_decide.txt  action_executor.txt  emotion_eval.txt  naive_single.txt  persona_react.txt
engine/scripts/: generate_reviews_post.py
engine/shipcheck/: cli.py  prompt_builder.py
engine/shipcheck/analysis/: g2_compare.py
engine/shipcheck/browser/: async_env.py  cdp_actions.py  cdp_dom.py  dom_tree.py  env.py  parser.js  pw_cli_env.py
engine/shipcheck/core/: types.py
engine/shipcheck/data/: collector.py  exporter.py
engine/shipcheck/layer1_persona/: generator.py  models.py
engine/shipcheck/review/: __init__.py
engine/shipcheck/runner/: experiment.py  naive_session.py  session.py
engine/shipcheck/tools/: session_end.py  session_init.py  step_update.py
(+232 files in other folders)
